# vibe-othello-engine

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: OthelloCoreTests.cmake  OthelloExperimentTests.cmake  OthelloToolTests.cmake
config/: datasets.example.toml  ntest_teacher_dataset.example.json
docs/: BASE_HEAD.md  BENCHMARKING.md  BENCHMARKS.md  CAPABILITY_MAP.md  README.md  ROADMAP.md  SEARCH_BASELINE.md  benchmarks.md  evaluation.md  exact-labels.md  roadmap.md
src/: bitboard_ops.hpp  bitboard_rules.hpp  board.cpp  endgame.cpp  endgame_last_n.hpp  endgame_ordering.hpp  endgame_tt.hpp  evaluation.cpp  evaluation_features.cpp  evaluation_internal.hpp  evaluation_patterns.cpp  evaluation_presets.cpp  hash.cpp  hash_detail.hpp  hash_update.hpp  notation.cpp  player.cpp  rules.cpp  search.cpp  search_aspiration.cpp  search_aspiration.hpp  search_bounds.hpp  search_common.hpp  search_context.hpp  search_core.hpp  search_move_ordering.cpp  search_move_ordering.hpp  search_node.cpp  search_node.hpp  search_ordering.hpp  search_result_adapter.cpp  search_result_adapter.hpp  search_root_policy.cpp  search_root_policy.hpp  search_runtime_options.hpp  search_session.cpp  search_session.hpp  search_tt.hpp  square.cpp  (+1 more)
tools/: CMakeLists.txt  analyze_position.cpp  bench_rule_core.cpp  match_runner.cpp  match_runner_core.hpp  match_summary.cpp  match_summary_core.hpp  validate_move_main.cpp
tools/analyze/: analysis.cpp  analysis.hpp  analyze_position_main.cpp
tools/benchmarks/: bench_common.hpp  bench_endgame.cpp  bench_rule_core.cpp  bench_search.cpp  endgame_main.cpp  endgame_positions.hpp  reporters.cpp  reporters.hpp  rule_core_main.cpp  search_bench_options.cpp  search_bench_options.hpp  search_bench_reporter.cpp  search_bench_reporter.hpp  search_bench_runner.cpp  search_bench_runner.hpp  search_main.cpp  search_positions.hpp
tools/cmake/: expect_failure.cmake
tools/common/: board_io.cpp  board_io.hpp  cli.cpp  cli.hpp  eval_config_io.cpp  eval_config_io.hpp  eval_config_schema.cpp  eval_config_schema.hpp  evaluator_cli.cpp  evaluator_cli.hpp  evaluator_selection.cpp  evaluator_selection.hpp  formatting.cpp  formatting.hpp  jsonl.cpp  jsonl.hpp  output_format.cpp  output_format.hpp  pattern_table_io.cpp  pattern_table_io.hpp  search_cli_options.cpp  search_cli_options.hpp  search_preset.cpp  search_preset.hpp  stats.cpp  stats.hpp
tools/eval_vs_exact/: eval_vs_exact.cpp  eval_vs_exact.hpp  eval_vs_exact_main.cpp
tools/exact_labels/: exact_label_dump.cpp  exact_label_dump.hpp  exact_label_dump_main.cpp
tools/match_runner/: core.cpp  core.hpp  engine_config.cpp  engine_config.hpp  external_player.cpp  external_player.hpp  jsonl_writer.cpp  jsonl_writer.hpp  match_runner_main.cpp  opening_suite.cpp  opening_suite.hpp  player_spec.cpp  player_spec.hpp  types.hpp
tools/match_summary/: json_cursor.cpp  json_cursor.hpp  parser.cpp  parser.hpp  summary.cpp  summary.hpp  types.hpp
tools/position_sampler/: position_sampler.cpp  position_sampler.hpp  position_sampler_main.cpp
tools/positions/: endgame_fixtures.cpp  endgame_fixtures.hpp  fixtures.cpp  fixtures.hpp  metrics.cpp  metrics.hpp  position.hpp  search_positions.hpp  tags.cpp  tags.hpp
tools/protocols/nboard/: engine_main.cpp  game_codec.cpp  game_codec.hpp  parser.cpp  parser.hpp  probe_main.cpp  process_client.cpp  process_client.hpp  protocol.cpp  protocol.hpp
tools/replay/: replay.cpp  replay.hpp  replay_game_main.cpp
tools/scripts/: README.md  balanced_position_pool.py  base_head_match_matrix.py  common.py  dataset_paths.py  eval_analyzer_metrics.py  eval_candidate_matrix.py  eval_config_search_validate.py  eval_config_tuner.py  eval_config_validate.py  eval_experiment_matrix.py  eval_move_choice_diagnostics.py  evidence.py  exact_label_workflow.py  external_teacher_label_workflow.py  extract_divergence_positions.py  forced_move_nboard_wrapper.py  legacy_othello_rules.py  match_summary.py  ntest_teacher_smoke.py  pattern_dataset_qc.py  pattern_only_train.py  pattern_specs.py  pattern_symmetry_diagnostics.py  pattern_teacher_v0_train.py  phase_balanced_label_sample.py  phase_pattern_table_train.py  regularized_pairwise_pattern_train.py  run_experiment_matrix.py  run_external_engine_once.py  run_match_experiment.py  run_ntest_once.py  teacher_dataset_build.py  teacher_label_mistake_mining.py  teacher_score_label_workflow.py
tools/scripts/examples/: search_ablation_smoke.json
tools/scripts/external_engines/: common.py  fake_engine.py  fake_persistent_nboard.py  fake_teacher_score_engine.py  ntest.py  one_shot.py  persistent.py
tools/scripts/fixtures/: pr115_divergence_board.txt
tools/scripts/pattern_training/: __init__.py  analysis_cache.py  analyzer.py  board9.py  dataset.py  features.py  pattern_tables.py  preference_features.py  root_candidates.py  splits.py
tools/scripts/tests/: test_balanced_position_pool.py  test_base_head_match_matrix.py  test_common.py  test_corner_tactical_fixtures.py  test_dataset_paths.py  test_eval_analyzer_metrics.py  test_eval_candidate_matrix.py  test_eval_config_search_validate.py  test_eval_config_tuner.py  test_eval_config_validate.py  test_eval_experiment_matrix.py  test_eval_move_choice_diagnostics.py  test_evidence.py  test_exact_label_workflow.py  test_external_engine_adapter.py  test_external_teacher_label_workflow.py  test_extract_divergence_positions.py  test_forced_move_nboard_wrapper.py  test_match_summary.py  test_ntest_adapter.py  test_ntest_teacher_smoke.py  test_pattern_dataset_qc.py  test_pattern_only_train.py  test_pattern_specs.py  test_pattern_symmetry_diagnostics.py  test_pattern_teacher_v0_train.py  test_pattern_training_analysis_cache.py  test_pattern_training_helpers.py  test_phase_balanced_label_sample.py  test_phase_pattern_table_train.py  test_regularized_pairwise_pattern_train.py  test_run_experiment_matrix.py  test_run_match_experiment.py  test_teacher_dataset_build.py  test_teacher_label_mistake_mining.py  test_teacher_score_label_workflow.py
(+175 files in other folders)
